--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>카카오톡 버튼있는 메시지 전송하기</title>
+<title>카카오톡 응 아니아 메시지 전송하기</title>
 <script id="javascript-sdk" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
 </head>
 <body>
-<p><strong>아래 카카오톡 아이콘을 눌러 전송하기</strong> By. dbstldhks</p>
+<p><strong>아래 카카오톡 아이콘을 눌러 응아니아 전송하기</strong>이런....</p>
 <a id="kakao-link-btn" href="javascript:sendLink()">
   <img
     src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
@@ -12,18 +12,18 @@
 </a>
   <!-- 심심해..... -->
 <script type="text/javascript">
- Kakao.init('c256e8d446feaeee89f3ee0eedccc76f');
+ Kakao.init('fdc9d74b5dd64c720d095b7a898d531b');
   function sendLink() {
     Kakao.Link.sendDefault({
       objectType: 'feed',
       content: {
-        title: '채팅방 가입하기👌',
-        description: '채팅방에 가입하여 친구들과 이야기 해보세요😊',
+        title: '응 아니아👌',
+        description: '응 아니아😊',
         imageUrl:
           'https://search.pstatic.net/sunny/?src=https%3A%2F%2Fcdn2.iconfinder.com%2Fdata%2Ficons%2Fsocial-icons-circular-color%2F512%2Fyoutube-512.png&type=a340',
         link: {
-          mobileWebUrl: '사진클릭시 모바일 주소',
-          webUrl: '사진클릭시 PC 주소',
+          mobileWebUrl: 'yes-no.kro.kr',
+          webUrl: 'yes-no.kro.kr',
         },
       },
       social: {
@@ -33,10 +33,10 @@
       },
       buttons: [
         {
-          title: '지금 바로 가입하기',
+          title: '응 아니아~',
           link: {
-            mobileWebUrl: 'kakao3.kro.kr',
-            webUrl: 'kakao3.kro.kr',
+            mobileWebUrl: 'yes-no.kro.kr',
+            webUrl: 'yes-no.kro.kr',
           },
         },
       ],
